<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/additional_fields_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:text="@string/show_additional_fields" />
    
    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name" />
    
    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:enabled="false"
        android:hint="@string/phone" />
    
    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />
    
    <EditText
        android:id="@+id/address_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/address" />
    
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:rowCount="1"
        android:columnCount="3" >        
    
	    <Button
	        android:id="@+id/save_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_row="0"
	        android:layout_column="0"
	        android:text="@string/save" />
	    
	    <Space
	        android:layout_width="20dp"
	        android:layout_height="wrap_content"
	        android:layout_row="0"
            android:layout_column="1" />
	    
	    <Button
	        android:id="@+id/cancel_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
            android:layout_row="0"
            android:layout_column="2"
	        android:text="@string/cancel" />
    
    </GridLayout>

</LinearLayout>
